--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "type": "image/png"
     },
     {
-      "src": "./images/png-apple-logo-9711.png",
+      "src": "./images/a.png",
       "sizes": "512x512",
       "type": "image/png"
     }
