--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "./images/png-apple-logo-9711.png",
+      "src": "./images/a.png",
       "sizes": "192x192",
       "type": "image/png"
     },
